; ModuleID = '/home/carl/AnghaBench/linux/drivers/thermal/extr_spear_thermal.c_thermal_get_temp.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/thermal/extr_spear_thermal.c_thermal_get_temp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.thermal_zone_device = type { %struct.spear_thermal_dev* }
%struct.spear_thermal_dev = type { i32 }

@MD_FACTOR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.thermal_zone_device*, i32*)* @thermal_get_temp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @thermal_get_temp(%struct.thermal_zone_device* %0, i32* %1) #0 {
  %3 = alloca %struct.thermal_zone_device*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.spear_thermal_dev*, align 8
  store %struct.thermal_zone_device* %0, %struct.thermal_zone_device** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load %struct.thermal_zone_device*, %struct.thermal_zone_device** %3, align 8
  %7 = getelementptr inbounds %struct.thermal_zone_device, %struct.thermal_zone_device* %6, i32 0, i32 0
  %8 = load %struct.spear_thermal_dev*, %struct.spear_thermal_dev** %7, align 8
  store %struct.spear_thermal_dev* %8, %struct.spear_thermal_dev** %5, align 8
  %9 = load %struct.spear_thermal_dev*, %struct.spear_thermal_dev** %5, align 8
  %10 = getelementptr inbounds %struct.spear_thermal_dev, %struct.spear_thermal_dev* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @readl_relaxed(i32 %11)
  %13 = and i32 %12, 127
  %14 = load i32, i32* @MD_FACTOR, align 4
  %15 = mul nsw i32 %13, %14
  %16 = load i32*, i32** %4, align 8
  store i32 %15, i32* %16, align 4
  ret i32 0
}

declare dso_local i32 @readl_relaxed(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
